collapse button fixed

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -40,6 +40,25 @@ body{
     transition: 0.9s;
 }
 
+.navbar button{
+  background-color: black;
+  margin-right: 10%;
+  padding: 0;
+  border: 1px solid red;
+}
+.navbar-toggler-icon{
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+  color: white;
+}
+.navbar button:hover{
+  background-color: black;
+  margin-right: 10%;
+  padding: 0;
+  border: 1px solid red;
+}
+
 
 
 .footer-top p{
