--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,24 @@ body{
     color: red;
     transition: 0.9s;
 }
+.navbar button{
+  background-color: black;
+  margin-right: 10%;
+  padding: 0;
+  border: 1px solid red;
+}
+.navbar-toggler-icon{
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+  color: white;
+}
+.navbar button:hover{
+  background-color: black;
+  margin-right: 10%;
+  padding: 0;
+  border: 1px solid red;
+}
 
 
 
